--- a/docs/how-to-guides/faststore-api/fetching-api-data.mdx
+++ b/docs/how-to-guides/faststore-api/fetching-api-data.mdx
@@ -24,7 +24,7 @@ We also recommend that you take the time to learn more about data fetching in th
 
 ### Best practices for fetching data
 
-Site performance tends to get worse as more API requests are made by a page. Because of this, the best practices for fetching data on your storefront involve getting precisely the data you need with the minimum number possible of FastStore API requests. The sections below go over what you can do to minimize the API requests of your pages.
+Site performance tends to get worse as more API requests are made by a page. Because of this, the best practices for fetching data on your storefront involve getting precisely the data you need with the minimum number possible of requests to the FastStore API. The sections below go over what you can do to minimize the API requests of your pages.
 
 #### Fetch only the data you need
 
