--- a/blog/2023-03-30-cms.md
+++ b/blog/2023-03-30-cms.md
@@ -24,4 +24,4 @@ Now, the `onlySettings` property allows the creation of content types meant for 
 The change enables the creation of setting-only content types that do not require storefront content and simplifies interface navigation by displaying only one tab for the page configuration.
 
 ## What needs to be done?
-Follow the instructions in [Using `onlySettings` property in a content type]() documentation and add the property to your store.
+Follow the instructions in [Using `onlySettings` property in a content type](/tbd) documentation and add the property to your store.
