--- a/blog/2023-04-03-cms.md
+++ b/blog/2023-04-03-cms.md
@@ -24,4 +24,4 @@ Now, the `onlySettings` property allows the creation of content types meant for 
 The change enables the creation of setting-only content types that do not require storefront content and simplifies interface navigation by displaying only one tab for the page configuration.
 
 ## What needs to be done?
-Follow the instructions in [Using `onlySettings` property in a content type](/tbd) documentation and add the property to your store.
+Follow the instructions in [Using `onlySettings` property in a content type](https://www.faststore.dev/how-to-guides/cms/vtex-headless-cms/Using%20onlySettings%20property%20in%20a%20content%20type) documentation and add the property to your store.
