Fixed image position

--- a/blog/2023-04-03-cms.md
+++ b/blog/2023-04-03-cms.md
@@ -8,8 +8,8 @@ The `onlySettings` property is now available for merchants to create content typ
 
 | Image 1  | Image 2  |  
 |---|---|
-| ![without-property](https://user-images.githubusercontent.com/67270558/227936062-02e15860-c6d6-4525-9eed-19c37abfd626.png)  | ![with-property](https://user-images.githubusercontent.com/67270558/227936232-fa8dfab7-2f01-42d1-9f68-b2ab8623a3af.png)  | 
-| Image 1 - Content type without `onlySettings` and with two tabs: **Sections** and **SEO**. | Image 2 - Content type with `onlySettings` and with one tab for settings: **SEO**. | 
+| ![with-property](https://user-images.githubusercontent.com/67270558/227936062-02e15860-c6d6-4525-9eed-19c37abfd626.png)  | ![without-property](https://user-images.githubusercontent.com/67270558/227936232-fa8dfab7-2f01-42d1-9f68-b2ab8623a3af.png)  | 
+| Image 1 - Content type with `onlySettings` and with one tab for settings: **SEO**. | Image 2 - Content type without `onlySettings` and with two tabs: **Sections** and **SEO**. | 
 
 This property ensures that the content type's page displays only the available settings without the **Section** tab.
 Follow the steps below to use the `onlySettings` property for your desired content type.
