--- a/blog/2022-02-08-webops.md
+++ b/blog/2022-02-08-webops.md
@@ -12,4 +12,4 @@ Under high loads, workflows that used to take from 2 to 10 minutes started to sp
 
 Earlier this week, we began an investigation into it, and we managed to improve the situation drastically. **Our pipelines runtime is now back to the 2-10 minutes range, depending on the workload type and size of the store.**
 
-We are working hard to deliver improvements to our platform such as this. Expect further improvements as we work on our platform's stability and performance!
+We are working hard to deliver improvements to our platform such as this. Expect further improvements during the closed beta as we work on our platform's stability and performance!
