--- a/docs/beta/about.mdx
+++ b/docs/beta/about.mdx
@@ -25,7 +25,7 @@ FastStore, WebOps & Headless CMS
 PROGRAM OVERVIEW
 </Link>
 <Link to="https://docs.google.com/forms/d/e/1FAIpQLSfmNyT5BepQw2AFyHnrI9-4fqvkOTWvdeBLdkQgxhQ2r0-g4A/viewform" className="button-tertiary">
-JOIN THE WAITING LIST
+REQUEST ACCESS
 </Link>
 </div>
 </div>
