update release note

--- a/blog/2023-04-03-cms.md
+++ b/blog/2023-04-03-cms.md
@@ -11,17 +11,16 @@ The `onlySettings` property is now available for merchants to create content typ
 | ![with-property](https://user-images.githubusercontent.com/67270558/227936062-02e15860-c6d6-4525-9eed-19c37abfd626.png)  | ![without-property](https://user-images.githubusercontent.com/67270558/227936232-fa8dfab7-2f01-42d1-9f68-b2ab8623a3af.png)  | 
 | Image 1 - Content type with `onlySettings` and with one tab for settings: **SEO**. | Image 2 - Content type without `onlySettings` and with two tabs: **Sections** and **SEO**. | 
 
-This property ensures that the content type's page displays only the available settings without the **Section** tab.
-Follow the steps below to use the `onlySettings` property for your desired content type.
+This property ensures that the content type page displays only the available settings without the **Sections** tab. Follow the steps below to use the `onlySettings` property for your desired content type.
 
 ## What has changed?
 
-Previously, when creating or editing a settings-only content type, there were two tabs on the page: one for sections and one for page settings. However, for some content types like SEO, which do not have storefront content, the Sections tab was not relevant.
+Previously, when creating or editing a settings-only content type, two tabs were displayed: one for sections and another for page settings. However, for some content types like SEO pages, which do not have storefront content, the Sections tab was not relevant.
 
-Now, the `onlySettings` property allows the creation of content types meant for settings only. This change improves content management and improves interface navigation for merchants by displaying only one configuration tab on the page.
+Now, the `onlySettings` property allows the creation of content types meant for settings only. This change improves content management and simplifies interface navigation for merchants by displaying only one settings tab on the page.
 
 ## Why are we making this change?
-The change enables the creation of setting-only content types that do not require storefront content and simplifies interface navigation by displaying only one tab for the page configuration.
+The change enables the creation of setting-only content types that do not require storefront content, and simplifies interface navigation by displaying only one tab for the page configuration.
 
 ## What needs to be done?
-Follow the instructions in [Using `onlySettings` property in a content type](https://www.faststore.dev/how-to-guides/cms/vtex-headless-cms/Using%20onlySettings%20property%20in%20a%20content%20type) documentation and add the property to your store.
+To add the property to your store, please follow the instructions in [Using `onlySettings` property in a content type](https://www.faststore.dev/how-to-guides/cms/vtex-headless-cms/Using%20onlySettings%20property%20in%20a%20content%20type).
