update according to LOC

--- a/blog/2023-04-06-cms.md
+++ b/blog/2023-04-06-cms.md
@@ -1,23 +1,22 @@
 ---
 title: "New property for creating a single page of a content type"
-description: "Create a single page for a content type with the new `isSingleton` property, ensuring consistency and preventing duplication of layout updates."
+description: "Headless CMS now has the isSingleton property for creating single content pages, avoiding duplicates, and keeping layout consistent across requests."
 tags: [cms]
 ---
 
-The `isSingleton` property is now available for merchants to create a single page of a content type in the Headless CMS. The property prevents the creation of multiple pages of the same content type, which ensures that any updates made to the content type's layout are consistent across all requests.
+The `isSingleton` property is now available for merchants to create a single page of a content type in the Headless CMS. This property prevents the creation of multiple pages of the same content type, ensuring that any updates made to the content type layout are consistent across all requests.
 
-![singleton-en](https://user-images.githubusercontent.com/67270558/230461926-6944c58e-60f2-4857-82d3-43ee507cac4e.gif)
+![gif-singleton](https://user-images.githubusercontent.com/67270558/228011883-b3d03a63-79c5-4a2c-8fb7-667ca19f56a4.gif)
 
 ## What has changed?
 
-Previously, when creating or editing a content type without the `isSingleton` property, the content type page could be duplicated in multiple versions. This could cause issues when trying to update the correct version or could result in multiple content types with the same name but different content, leading to confusion during content management.
+Previously, when creating or editing a content type without the `isSingleton` property, the content type page could be duplicated in multiple versions. This could cause issues when trying to update the correct version or result in multiple content types with the same name but different content, leading to confusion during content management.
 
-With the introduction of the `isSingleton` property, your store's content types can maintain consistency by preventing the creation of multiple pages of the same content type. This ensures that any updates to the page's layout are reflected in all requests, streamlining your content management process.
+With the `isSingleton` property, you can keep consistency across the content types in your store by preventing the creation of multiple pages with the same content type. This ensures that any updates to the page layout are reflected in all requests, streamlining your content management process.
 
 
 ## Why are we making this change?
-The change enables consistency in a content type’s content. The `isSingleton` property prevents the creation of multiple pages of the same content type and ensures updates to the page's layout are reflected in all requests.
+The change enables consistency in the content of a page. The `isSingleton` property prevents the creation of multiple pages of the same content type and ensures updates to the page layout are reflected in all requests.
 
 ## What needs to be done?
-Refer to the [Using `isSingleton` property in a content type](https://www.faststore.dev/how-to-guides/cms/vtex-headless-cms/Using%20isSingleton%20property%20in%20a%20contenty%20type) documentation for more information.
-
+For more information, please refer to the [Using `isSingleton` property in a content type](/tbd) documentation.
