--- a/blog/2023-04-06-cms.md
+++ b/blog/2023-04-06-cms.md
@@ -19,4 +19,4 @@ With the `isSingleton` property, you can keep consistency across the content typ
 The change enables consistency in the content of a page. The `isSingleton` property prevents the creation of multiple pages of the same content type and ensures updates to the page layout are reflected in all requests.
 
 ## What needs to be done?
-For more information, please refer to the [Using `isSingleton` property in a content type]([/tbd](https://www.faststore.dev/how-to-guides/cms/vtex-headless-cms/Using%20isSingleton%20property%20in%20a%20contenty%20type)) documentation.
+For more information, please refer to the [Using `isSingleton` property in a content type](https://www.faststore.dev/how-to-guides/cms/vtex-headless-cms/Using%20isSingleton%20property%20in%20a%20contenty%20type) documentation.
