Improvement: Update allCollections.mdx

--- a/docs/reference/api/queries/allCollections.mdx
+++ b/docs/reference/api/queries/allCollections.mdx
@@ -10,7 +10,7 @@ import GraphQLExplorer from '@site/src/components/GraphQLExplorer/GraphQLExplore
 
 # allCollections
 
-Returns a paginated list with information about all the store collections.
+Returns a paginated list of information about the categories and brands from the store catalog.
 
 ## Usage
 
