--- a/docs/reference/api/mutations/cart.mdx
+++ b/docs/reference/api/mutations/cart.mdx
@@ -4,12 +4,12 @@ sidebar_position: 1
 ---
 
 import PropsComponent from "@site/src/components/PropsComponent/PropsComponent";
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 # validateCart
 
-Adds, removes, or updates items in a given shopping cart. 
+Adds, removes, or updates items in a given shopping cart.
 
 The `validateCart` mutation compares the cart displayed in the UI with the cart kept in the ecommerce platform. If differences are detected, it updates the cart stored on the platform and then returns the adjusted data. Otherwise, it returns `null`.
 
@@ -22,50 +22,72 @@ The `validateCart` mutation compares the cart displayed in the UI with the cart 
 ### Arguments
 
 <PropsComponent
-      name="cart"
-      type="IStoreCart!"
-      description="Shopping cart to be validated (<code>IStoreCart</code> with <code>orderNumber</code> and <code>acceptedOffer</code>)"
-      required="true"
-    />
+  name="cart"
+  type="IStoreCart!"
+  description="Shopping cart to be validated (<code>IStoreCart</code> with <code>orderNumber</code> and <code>acceptedOffer</code>)"
+  required="true"
+/>
 
 <PropsComponent
-      name="orderNumber"
-      type="String!"
-      description="ID of the order in the ecommerce platform."
-      required="true"
-    />
+  name="orderNumber"
+  type="String!"
+  description="ID of the order in the ecommerce platform."
+  required="true"
+/>
 
 <PropsComponent
-      name="acceptedOffer"
-      type="[IStoreOffer!]"
-      description="Array of offers (<code>IStoreOffer</code>) that are in the UI cart."
-      required="true"
-    />
+  name="acceptedOffer"
+  type="[IStoreOffer!]"
+  description="Array of offers (<code>IStoreOffer</code>) that are in the UI cart."
+  required="true"
+/>
 
 ### Fields
 
 Below you can see a list of fields that can be returned by the `validateCart` mutation. Click on the links to learn more details about each field.
 
 <ul>
-  <li><code>validateCart</code>: <a href="/reference/api/objects#storecart">StoreCart</a>
-  <ul>
-    <li><code>order</code>: <a href="/reference/api/objects#storeorder">StoreOrder</a>!
+  <li>
+    <code>validateCart</code>:{" "}
+    <a href="/reference/api/objects#storecart">StoreCart</a>
     <ul>
-      <li><code>orderNumber</code>: <a href="reference/api/scalars#string">String</a>!</li>
-      <li><code>acceptedOffer</code>: [<a href="/reference/api/objects#storeoffer">StoreOffer</a>!]!
-      <ul>
-        <li>Offer information. Check <a href="/reference/api/objects#storeoffer">StoreOffer</a> to see all possible fields.</li>
-      </ul>
+      <li>
+        <code>order</code>:{" "}
+        <a href="/reference/api/objects#storeorder">StoreOrder</a>!
+        <ul>
+          <li>
+            <code>orderNumber</code>:{" "}
+            <a href="reference/api/scalars#string">String</a>!
+          </li>
+          <li>
+            <code>acceptedOffer</code>: [
+            <a href="/reference/api/objects#storeoffer">StoreOffer</a>!]!
+            <ul>
+              <li>
+                Offer information. Check{" "}
+                <a href="/reference/api/objects#storeoffer">StoreOffer</a> to
+                see all possible fields.
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <code>messages</code>: [
+        <a href="/reference/api/objects#storecartmessage">StoreCartMessage</a>
+        !]!
+        <ul>
+          <li>
+            <code>text</code>:{" "}
+            <a href="/reference/api/scalars#string">String</a>!
+          </li>
+          <li>
+            <code>status</code>:{" "}
+            <a href="/reference/api/enums#storestatus">StoreStatus</a>!
+          </li>
+        </ul>
       </li>
     </ul>
-    </li>
-    <li><code>messages</code>: [<a href="/reference/api/objects#storecartmessage">StoreCartMessage</a>!]!
-    <ul>
-      <li><code>text</code>: <a href="/reference/api/scalars#string">String</a>!</li>
-      <li><code>status</code>: <a href="/reference/api/enums#storestatus">StoreStatus</a>!</li>
-    </ul>
-    </li>
-  </ul>
   </li>
 </ul>
 
@@ -126,30 +148,28 @@ Note that sending an empty `acceptedOffer` array will not empty the cart. You mu
 
 ```graphql
 mutation validateCart($cart: IStoreCart!) {
-  validateCart (
-    cart: $cart
-  ) {
+  validateCart(cart: $cart) {
     order {
-      orderNumber,
+      orderNumber
       acceptedOffer {
-        price,
-        quantity,
+        price
+        quantity
         seller {
           identifier
-        },
+        }
         itemOffered {
-          name,
-          sku,
-          description,
+          name
+          sku
+          description
           image {
-            url,
+            url
             alternateName
           }
         }
       }
-    },
+    }
     messages {
-      text,
+      text
       status
     }
   }
@@ -239,30 +259,28 @@ mutation validateCart($cart: IStoreCart!) {
 
 ```graphql
 mutation validateCart($cart: IStoreCart!) {
-  validateCart (
-    cart: $cart
-  ) {
+  validateCart(cart: $cart) {
     order {
-      orderNumber,
+      orderNumber
       acceptedOffer {
-        price,
-        quantity,
+        price
+        quantity
         seller {
           identifier
-        },
+        }
         itemOffered {
-          name,
-          sku,
-          description,
+          name
+          sku
+          description
           image {
-            url,
+            url
             alternateName
           }
         }
       }
-    },
+    }
     messages {
-      text,
+      text
       status
     }
   }
