--- a/docs/reference/api/queries/allProducts.mdx
+++ b/docs/reference/api/queries/allProducts.mdx
@@ -4,9 +4,9 @@ sidebar_position: 2
 ---
 
 import PropsComponent from "@site/src/components/PropsComponent/PropsComponent";
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-import GraphQLExplorer from '@site/src/components/GraphQLExplorer/GraphQLExplorer'
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
+import GraphQLExplorer from "@site/src/components/GraphQLExplorer/GraphQLExplorer";
 
 # allProducts
 
@@ -21,21 +21,20 @@ Returns a paginated list with information about all the store products.
 <h3 className="mb-4">Arguments</h3>
 
 <PropsComponent
-      name="first"
-      type="Int"
-      description="	Number of items that should return from the complete result list."
-      required="true"
-    />
+  name="first"
+  type="Int"
+  description="	Number of items that should return from the complete result list."
+  required="true"
+/>
 
 <PropsComponent
-      name="after"
-      type="String"
-      description="Product pagination argument, indicating the cursor corresponding to the item after which the results should be fetched."
-    />
+  name="after"
+  type="String"
+  description="Product pagination argument, indicating the cursor corresponding to the item after which the results should be fetched."
+/>
 
 </div>
 <div>
-
 
 <Tabs>
   <TabItem value="query" label="Query" default>
@@ -55,27 +54,53 @@ query($first: Int!){
 Below you can see a list of all fields that can be queried with `allProducts`. Click on the links to learn more details about each field.
 
 <ul>
-  <li><a href="/reference/api/objects#storeproductconnection"><code>StoreProductConnection</code></a>
+  <li>
+    <a href="/reference/api/objects#storeproductconnection">
+      <code>StoreProductConnection</code>
+    </a>
     <ul>
-    <li><code>pageInfo</code>: <a href="/reference/api/objects/#storepageinfo">StorePageInfo</a>
-      <ul>
-      <li><code>hasNextPage</code>: boolean!</li>
-      <li><code>hasPreviousPage</code>: boolean!</li>
-      <li><code>startCursor</code>: string!</li>
-      <li><code>endCursor</code>: string!</li>
-      <li><code>totalCount</code>: int!</li>
-      </ul>
-    </li>
-    <li><code>edges</code>: [<a href="/reference/api/objects/#storeproductedge">StoreProductEdge</a>]!
-      <ul>
-      <li><code>node</code>: <a href="/reference/api/objects/#storeproduct">StoreProduct</a>!
+      <li>
+        <code>pageInfo</code>:{" "}
+        <a href="/reference/api/objects/#storepageinfo">StorePageInfo</a>
         <ul>
-        <li>Product information. Check <a href="/reference/api/objects/#storeproduct">StoreProduct</a> to see all possible fields.</li>
+          <li>
+            <code>hasNextPage</code>: boolean!
+          </li>
+          <li>
+            <code>hasPreviousPage</code>: boolean!
+          </li>
+          <li>
+            <code>startCursor</code>: string!
+          </li>
+          <li>
+            <code>endCursor</code>: string!
+          </li>
+          <li>
+            <code>totalCount</code>: int!
+          </li>
         </ul>
       </li>
-      <li><code>cursor</code>: string!</li>
-      </ul>
-    </li>
+      <li>
+        <code>edges</code>: [
+        <a href="/reference/api/objects/#storeproductedge">StoreProductEdge</a>
+        ]!
+        <ul>
+          <li>
+            <code>node</code>:{" "}
+            <a href="/reference/api/objects/#storeproduct">StoreProduct</a>!
+            <ul>
+              <li>
+                Product information. Check{" "}
+                <a href="/reference/api/objects/#storeproduct">StoreProduct</a>{" "}
+                to see all possible fields.
+              </li>
+            </ul>
+          </li>
+          <li>
+            <code>cursor</code>: string!
+          </li>
+        </ul>
+      </li>
     </ul>
   </li>
 </ul>
@@ -89,7 +114,8 @@ Below you can see a list of all fields that can be queried with `allProducts`. C
 
 Get the names, SKUs, and cursors of the five products after the product associated with the cursor `4`. Also, get the last cursor in the complete list and whether there are more results for the next page.
 
-<GraphQLExplorer query='query {
+<GraphQLExplorer
+  query='query {
   allProducts (first:5, after:"4") {
     pageInfo {
       hasNextPage,
@@ -103,4 +129,5 @@ Get the names, SKUs, and cursors of the five products after the product associat
       cursor
     }
   }
-}'/>
+}'
+/>
