--- a/docs/how-to-guides/troubleshooting/debugging-releases-publishing.mdx
+++ b/docs/how-to-guides/troubleshooting/debugging-releases-publishing.mdx
@@ -22,7 +22,7 @@ This guide is intended to help you identify the root cause of publishing errors 
 ### Step 1 - Verifying the Release status
 
 1. Access the **VTEX Admin** and go to the **Releases** module (`https://{account}.myvtex.com/admin/releases`).
-2. Check if your Release status corresponds to **Publishing**. If yes, open the Release and copy the hexadecimal identifier (e.g., `635feddd372d5fef67c4160e`) presented at the end of the page URL (e.g., `/admin/releases/635feddd372d5fef67c4160e`). If not, [open a support ticket describing your issue.](https://help-tickets.vtex.com/smartlink/sso/login/zendesk)
+2. Check if your Release status corresponds to **Publishing**. If yes, open the Release and copy the hexadecimal identifier (e.g., `635feddd372d5fef67c4160e`) presented at the end of the page URL (e.g., `/admin/releases/635feddd372d5fef67c4160e`). If not, [open a support ticket describing your issue.](https://help.vtex.com/support)
 
 ### Step 2 - Checking the WebOps pipeline
 
@@ -34,7 +34,7 @@ After getting the Release identifier, take the following steps to verify the sta
 2. Check the status of the **Build check** for that commit by clicking on one of the following marks:
 
    - <span className="text-lg text-green-500">✓</span> <strong>Check mark</strong> - the build was successful. If this status does not agree with what you see in the Admin, the communication between the Releases module and WebOps must have failed. You should not worry in this case as this error is related to a communication issue on our end.
-   - <span className="text-lg text-yellow-500">●</span> <strong>Circle mark</strong> - the build is queued and waiting for other builds to complete. If queued for longer than 45 minutes, please <a hred="https://help-tickets.vtex.com/smartlink/sso/login/zendesk">open a support ticket.</a>
+   - <span className="text-lg text-yellow-500">●</span> <strong>Circle mark</strong> - the build is queued and waiting for other builds to complete. If queued for longer than 45 minutes, please <a hred="https://help.vtex.com/support">open a support ticket.</a>
    - <span className="text-4xl text-red-500">⨯</span> <strong>Cross mark</strong> - the build failed. For more information, proceed to the following step.
 
    ![WebOps](https://vtexhelp.vtexassets.com/assets/docs/src/webops-status___2ca8db09504fb7786b8e17bc3ec521c6.png)
@@ -52,7 +52,7 @@ If the Release's build failed, take the following steps to identify the root cau
 
 3. If the error persists, go through the build log and check the error presented.
 
-If faced with the **Deploying development preview** and **Development deploy preview failed** errors, a technical issue on our end prevented WebOps from deploying your code. [Open a support ticket](https://help-tickets.vtex.com/smartlink/sso/login/zendesk) describing the issue.
+If faced with the **Deploying development preview** and **Development deploy preview failed** errors, a technical issue on our end prevented WebOps from deploying your code. [Open a support ticket](https://help.vtex.com/support) describing the issue.
 
 If faced with one of the following errors, either the build failed to execute, or there's a problem with the store's code. In this case, refer to our [Troubleshooting guides](/how-to-guides/troubleshooting).
 
